# lfc

./: Cargo.toml  README.md  schema.sql
.github/workflows/: release.yml
src/: ai_deduplicator.rs  ai_summarizer.rs  app.rs  calendar.rs  config.rs  db.rs  email.rs  extractor.rs  logger.rs  main.rs  models.rs  telegram.rs  utils.rs
