[package]
name = "lfc"
version = "0.2.0"
edition = "2024"
authors = ["bbkingisking <poodle.dollies_4y@icloud.com>"]
description = "Summarize Liverpool FC news"
license = "WTFPL"
repository = "https://github.com/bbkingisking/lfc"

[dependencies]
anyhow = "1.0.99"
async-openai = "0.29.3"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
ical = "0.11.0"
lettre = { version = "0.11.18", features = ["tokio1", "smtp-transport", "tokio1-native-tls"] }
log = "0.4.28"
regex = "1.11.2"
reqwest = "0.12.23"
rusqlite = "0.37.0"
scraper = "0.24.0"
serde = "1.0.219"
serde_json = "1.0.143"
serde_path_to_error = "0.1.17"
serde_yaml = "0.9.34"
teloxide = "0.17.0"
tiktoken-rs = "0.7.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
xdg = "3.0.0"
